// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse function should collapse a tree such as specified in RFC002 example 1`] = `
TBlock {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TPhrasingAnchor {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "This is ",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "phrasing content",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "href": "https://domain.com",
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlockAnchor {
      "attributes": Object {
        "src": "https://domain.com/logo.jpg",
      },
      "children": Array [],
      "href": "https://domain.com",
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "img",
      "type": "block",
    },
    TPhrasingAnchor {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "and this is ",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "too",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": ".",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "href": "https://domain.com",
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "block",
}
`;

exports[`collapse function should handle deeply nested HTML 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "First implicit paragraph.",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "data": "Second implicit paragraph",
              "isAnchor": false,
              "parentStyles": null,
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {},
          "children": Array [
            TPhrasing {
              "attributes": Object {},
              "children": Array [
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "data": "A new paragraph.",
                  "isAnchor": false,
                  "parentStyles": null,
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": null,
                  "type": "text",
                },
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "data": " And a span within",
                  "isAnchor": false,
                  "parentStyles": null,
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": "span",
                  "type": "text",
                },
              ],
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "phrasing",
            },
            TBlock {
              "attributes": Object {
                "src": "https://domain.com/logo.jpg",
              },
              "children": Array [],
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "img",
              "type": "block",
            },
          ],
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "p",
          "type": "block",
        },
      ],
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "article",
  "type": "block",
}
`;

exports[`collapse function should handle direct style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "This is nice!",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {
      "borderBottomWidth": 20,
      "borderLeftWidth": 20,
      "borderRightWidth": 20,
      "borderTopWidth": 20,
    },
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle indirect style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "data": "This is great!",
              "isAnchor": false,
              "parentStyles": null,
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {
              "borderBottomWidth": 20,
              "borderLeftWidth": 20,
              "borderRightWidth": 20,
              "borderTopWidth": 20,
            },
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
      ],
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle nested anchors 1`] = `
TPhrasingAnchor {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TText {
      "attributes": Object {},
      "children": Array [],
      "data": "This is ",
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "data": "phrasing content",
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "span",
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "data": " ",
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TPhrasingAnchor {
      "attributes": Object {
        "href": "https://sub.domain.com",
      },
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "and this is ",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "too",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
      ],
      "href": "https://sub.domain.com",
      "isAnchor": true,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "a",
      "type": "phrasing",
    },
  ],
  "href": "https://domain.com",
  "isAnchor": true,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "phrasing",
}
`;

exports[`collapse function should hoist blocks recursively 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "data": "Line1",
          "isAnchor": false,
          "parentStyles": null,
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "data": "Line2",
              "isAnchor": false,
              "parentStyles": null,
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
            TText {
              "attributes": Object {},
              "children": Array [],
              "data": " Line3",
              "isAnchor": false,
              "parentStyles": null,
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "span",
              "type": "text",
            },
          ],
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {
            "src": "https://domain.com/logo.jpg",
          },
          "children": Array [],
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "img",
          "type": "block",
        },
      ],
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "strong",
      "type": "block",
    },
  ],
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "span",
  "type": "block",
}
`;
